# matatu-search-backend

./: .env.example  .gitignore  alembic.ini  database.py  dffd.py  main.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  test.py  write_models.py
alembic/: env.py
alembic/versions/: cc1aba6709c1_initial_schema.py
app/: common_schemas.py  config.py  dependencies.py  main.py  models.py
app/cache/: decorators.py  keys.py
app/core/: cloudinary.py  config.py  database.py  models.py
app/db/: redis.py  session.py
app/destinations/: router.py  schemas.py  service.py
app/jobs/: correction_consensus.py  occupancy_recalc.py  scheduler.py  surge_expiry.py  transfer_fare_sync.py
app/matatus/: schemas.py
app/middleware/: logging.py  request_id.py
app/models/: __init__.py  alert.py  base.py  fare.py  intelligence.py  route.py  sacco.py  stage.py
app/roads/: router.py  schemas.py  service.py
app/routers/: __init__.py  admin.py  alerts.py  auth.py  bundle.py  corrections.py  health.py  saccos.py  stages.py  trips.py
app/routes/: router.py  schemas.py  service.py
app/saccos/: router.py  schemas.py  service.py
app/schemas/: __init__.py  alert.py  common.py  fare.py  sacco.py  stage.py  trip.py
app/services/: bundle_service.py  fare_service.py  notification_service.py  scenario_engine.py  stage_resolver.py  transfer_service.py  (+1 more)
routers/: route_router.py
schemas/: route_schemas.py
seed/: app_settings.py  fares.py  public_holidays.py  routes.py  run.py  saccos.py  stages.py  transfers.py
services/: route_service.py
tests/: conftest.py
(+16 files in other folders)
